--- a/SelahSeries/Views/EMI/_EMILayout.cshtml
+++ b/SelahSeries/Views/EMI/_EMILayout.cshtml
@@ -68,6 +68,7 @@
         </div>
     </header>
     <!--================Header Menu Area =================-->
+    @await Html.PartialAsync("AlertViewPartial")
 
     @RenderBody()
 
@@ -79,7 +80,7 @@
                     <div class="single-footer-widget">
                         <h6 class="footer_title">About Initiative</h6>
                         <p color="#777">We are a group targeted at giving hope to pregnant and nursing young girls who have been lessened by the shame and rejection the society throws at them. We lit their faces through our all round support. </p>
-                        
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
@@ -107,13 +108,12 @@
                         <h6 class="footer_title">Subscribe to Newsletter</h6>
                         <p>Subscribe to receive updates on our events &amp; projects and also notifications from Selah Series blog.</p>
                         <div id="mc_embed_signup">
-                            <form method="post" asp-controller="Home" asp-action="SuscribeToPost" class="subscribe_form relative">
+                            <form method="post" asp-controller="EMI" asp-action="SuscribeToPost" class="subscribe_form relative">
                                 @Html.AntiForgeryToken()
                                 <div class="input-group d-flex flex-row">
                                     <input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email" name="email" aria-label="Recipient's username" aria-describedby="basic-addon2">
                                     <button type="submit" class="btn sub-btn"><span class="lnr lnr-location"></span></button>
                                 </div>
-                                @await Html.PartialAsync("AlertViewPartial")
                             </form>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
             <div class="row footer-bottom d-flex justify-content-between align-items-center">
                 <p class="col-lg-8 col-md-8 footer-text m-0 foot_text">
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Emerald Light Initiative 
+                    Emerald Light Initiative
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
                 <div class="col-lg-4 col-md-4 footer-social">
